--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,12 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
+# Visual Studio Code
+.vscode/
+
+# Mac .DS_Store
+*.DS_Store*
+
 # ES6 compiled code
 lib/
 
@@ -98,3 +104,5 @@ secrets/
 
 # Debug output
 output/
+
+
