--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jeremy Schreck",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^4.4.5",
     "espn-fantasy-football-api": "^0.9.0",
     "underscore": "^1.9.1"
   },
